Fix text alignment in dropdown

--- a/src/common/Dropdown.scss
+++ b/src/common/Dropdown.scss
@@ -132,6 +132,7 @@
 
       > li {
         display: flex;
+        text-align: left;
         align-items: center;
         justify-content: flex-start;
         padding: 0.25rem 0.5rem;
